--- a/ops/roles/nginx_rtmp/templates/site-default.j2
+++ b/ops/roles/nginx_rtmp/templates/site-default.j2
@@ -3,34 +3,51 @@ server {
     listen [::]:443 ssl http2;
 
     server_name {{ nginx_rtmp.server_name }};
+
     ssl_certificate     /etc/letsencrypt/live/{{ nginx_rtmp.server_name }}/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/{{ nginx_rtmp.server_name }}/privkey.pem;
+
     root /var/www/html;
-    location / {
+
+    location /{{ nginx_rtmp.stream_secret }} {        
+        location /{{ nginx_rtmp.stream_secret }}/view {
+            index index.html;
+
+            location /{{ nginx_rtmp.stream_secret }}/view/shaka {                
+                rewrite ^ /shaka-index.html break;
+            }
+
+            
+            location /{{ nginx_rtmp.stream_secret }}/view/dash {                
+                rewrite ^ /dashref-index.html break;
+            }
+
+            location /{{ nginx_rtmp.stream_secret }}/view/hls {                
+                rewrite ^ /hls-index.html break;
+            }
+
         
-        index index.html;
+            # Source: https://docs.peer5.com/guides/setting-up-hls-live-streaming-server-using-nginx/
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Expose-Headers' 'Content-Length';
+            if ($request_method = 'OPTIONS') {  # allow CORS preflight requests
+                add_header 'Access-Control-Allow-Origin' '*';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+        }
+        location /{{ nginx_rtmp.stream_secret }}/hls {
+            add_header Cache-Control no-cache;  # disable client-side caching
+            root /var/www;
+        }
 
-        #try_files $uri $uri/ =404;
-
-        # Source: https://docs.peer5.com/guides/setting-up-hls-live-streaming-server-using-nginx/
-        add_header 'Access-Control-Allow-Origin' '*' always;
-        add_header 'Access-Control-Expose-Headers' 'Content-Length';
-        if ($request_method = 'OPTIONS') {  # allow CORS preflight requests
-            add_header 'Access-Control-Allow-Origin' '*';
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            add_header 'Content-Length' 0;
-            return 204;
+        location /{{ nginx_rtmp.stream_secret }}/dsh {
+            add_header Cache-Control no-store;
+            root /var/www;        
         }
     }
 
-    location /hls {
-        add_header Cache-Control no-cache;  # disable client-side caching
-        root /var/www;
-    }
-
-    location /dsh {
-        add_header Cache-Control no-cache;
-        root /var/www;        
-    }
+   
 }
